fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__c151_fix_multiple_inline_if.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: fixed
snapshot_kind: text
---
        program test
            implicit none
            integer :: i
            if (i == 1) then
              print *, "foo"
            end if
            if (i == 2) then
              print *, "bar"
            end if
            if (i == 3) print *, "baz"
        end program test
