fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__exit-or-cycle-in-unlabelled-loop_C142.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C142.f90:27:7: C142 'cycle' statement in unlabelled 'do' loop
   |
25 |     ! should warn
26 |     do j = 1, 2
27 |       cycle
   |       ^^^^^ C142
28 |     end do
29 |   end do label5
   |

./resources/test/fixtures/correctness/C142.f90:50:5: C142 'exit' statement in unlabelled 'do' loop
   |
48 |   do
49 |     ! should warn
50 |     exit
   |     ^^^^ C142
51 |   end do
   |

./resources/test/fixtures/correctness/C142.f90:56:7: C142 'exit' statement in unlabelled 'do' loop
   |
54 |     do
55 |       ! should warn
56 |       exit
   |       ^^^^ C142
57 |     end do
58 |   end do
   |
