fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__external-procedure_C091.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C091.f90:12:3: C091 'g' declared as `external`
   |
10 |   end interface
11 |
12 |   external :: g
   |   ^^^^^^^^^^^^^ C091
13 |
14 | end program test
   |
   = help: Write an explicit interface
