fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__if-statement-semicolon_C151.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C151.f90:5:34: C151 [*] Semicolon following inline if-statement is misleading
  |
3 |   logical, parameter :: condition = .false.
4 |
5 |   if (condition) print *, "Hello"; print *, "World!"
  |                                  ^ C151
6 |
7 |   if (condition) print * , &
  |
  = help: Convert to `if(...) then` statement

ℹ Safe fix
2 2 |   implicit none (type, external)
3 3 |   logical, parameter :: condition = .false.
4 4 | 
5   |-  if (condition) print *, "Hello"; print *, "World!"
  5 |+  if (condition) then
  6 |+    print *, "Hello"
  7 |+  end if
  8 |+  print *, "World!"
6 9 | 
7 10 |   if (condition) print * , &
8 11 |     "Hello"; print *, "World!"

./resources/test/fixtures/correctness/C151.f90:8:12: C151 [*] Semicolon following inline if-statement is misleading
   |
 7 |   if (condition) print * , &
 8 |     "Hello"; print *, "World!"
   |            ^ C151
 9 |
10 |   ! The following is bad practice, but shouldn't trigger
   |
   = help: Convert to `if(...) then` statement

ℹ Safe fix
4  4  | 
5  5  |   if (condition) print *, "Hello"; print *, "World!"
6  6  | 
7     |-  if (condition) print * , &
8     |-    "Hello"; print *, "World!"
   7  |+  if (condition) then
   8  |+    print * , &
   9  |+    "Hello"
   10 |+  end if
   11 |+  print *, "World!"
9  12 | 
10 13 |   ! The following is bad practice, but shouldn't trigger
11 14 |   if (condition) then

./resources/test/fixtures/correctness/C151.f90:34:32: C151 [*] Semicolon following inline if-statement is misleading
   |
32 |   ! To confirm that the fixes work when combined, see the test
33 |   ! `c151_fix_multiple_inline_if` in `rules/correctness/mod.rs`
34 |   if (condition) print *, "foo"; if(.true.) print *, "bar"; if(.false.) print *, "baz";
   |                                ^ C151
35 | end program p
   |
   = help: Convert to `if(...) then` statement

ℹ Safe fix
31 31 |   ! For multiple inline if statements, each should be moved to its own line.
32 32 |   ! To confirm that the fixes work when combined, see the test
33 33 |   ! `c151_fix_multiple_inline_if` in `rules/correctness/mod.rs`
34    |-  if (condition) print *, "foo"; if(.true.) print *, "bar"; if(.false.) print *, "baz";
   34 |+  if (condition) then
   35 |+    print *, "foo"
   36 |+  end if
   37 |+  if(.true.) print *, "bar"; if(.false.) print *, "baz";
35 38 | end program p

./resources/test/fixtures/correctness/C151.f90:34:59: C151 [*] Semicolon following inline if-statement is misleading
   |
32 |   ! To confirm that the fixes work when combined, see the test
33 |   ! `c151_fix_multiple_inline_if` in `rules/correctness/mod.rs`
34 |   if (condition) print *, "foo"; if(.true.) print *, "bar"; if(.false.) print *, "baz";
   |                                                           ^ C151
35 | end program p
   |
   = help: Convert to `if(...) then` statement

ℹ Safe fix
31 31 |   ! For multiple inline if statements, each should be moved to its own line.
32 32 |   ! To confirm that the fixes work when combined, see the test
33 33 |   ! `c151_fix_multiple_inline_if` in `rules/correctness/mod.rs`
34    |-  if (condition) print *, "foo"; if(.true.) print *, "bar"; if(.false.) print *, "baz";
   34 |+  if (condition) print *, "foo"; if(.true.) then
   35 |+    print *, "bar"
   36 |+  end if
   37 |+  if(.false.) print *, "baz";
35 38 | end program p
