fortitude/src/rules/correctness/snapshots/fortitude__rules__correctness__tests__implicit-external-procedures_C053.f90.snap
---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C053.f90:2:3: C053 [*] 'implicit none' missing 'external'
  |
1 | module a
2 |   implicit none
  |   ^^^^^^^^^^^^^ C053
3 | end module a
  |
  = help: Add `(external)` to 'implicit none'

ℹ Unsafe fix
1 1 | module a
2   |-  implicit none
  2 |+  implicit none (type, external)
3 3 | end module a
4 4 | 
5 5 | module b

./resources/test/fixtures/correctness/C053.f90:6:3: C053 [*] 'implicit none' missing 'external'
  |
5 | module b
6 |   implicit none (type)
  |   ^^^^^^^^^^^^^^^^^^^^ C053
7 | end module b
  |
  = help: Add `(external)` to 'implicit none'

ℹ Unsafe fix
3 3 | end module a
4 4 | 
5 5 | module b
6   |-  implicit none (type)
  6 |+  implicit none (type, external)
7 7 | end module b
8 8 | 
9 9 | module c
